Add licenses/exceptions from SPDX license list 3.21
Reference: https://github.com/nexB/scancode-licensedb/issues/37
Reference: https://github.com/spdx/license-list-data/releases/tag/v3.21

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/external/licensecheck/fedora/MIT.yml
+++ b/tests/licensedcode/data/datadriven/external/licensecheck/fedora/MIT.yml
@@ -4,7 +4,7 @@ license_expressions:
   - mit-old-style-no-advert AND warranty-disclaimer
   - isc
   - mit-old-style AND warranty-disclaimer
-  - historical
+  - metamail
   - postgresql
   - postgresql
   - postgresql
@@ -31,12 +31,12 @@ license_expressions:
   - x11-tiff
   - other-permissive
   - x11 AND other-permissive
+  - widget-workshop
   - other-permissive
   - other-permissive
   - other-permissive
   - other-permissive
-  - other-permissive
-  - other-permissive
+  - unixcrypt
   - isc
   - osf-1990
   - other-permissive
