--- a/tests/licensedcode/data/datadriven/lic2/apache-1.1_and_apache-2.0_and_beerware_and_bsd-simplified-darwin_and_darwin-file_and_other.label.yml
+++ b/tests/licensedcode/data/datadriven/lic2/apache-1.1_and_apache-2.0_and_beerware_and_bsd-simplified-darwin_and_darwin-file_and_other.label.yml
@@ -6,7 +6,7 @@ license_expressions:
   - hs-regexp
   - bsd-simplified-darwin
   - x11-keith-packard
-  - historical
+  - metamail
   - rsa-md5 AND apache-2.0
   - rsa-md5
   - rsa-md5 AND apache-2.0
