--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,6 @@ testing =
     isort
 
 docs =
-    Sphinx == 5.1.0
-    sphinx-rtd-theme >= 0.5.0
-    doc8 >= 0.8.1
+    Sphinx>=5.0.2
+    sphinx-rtd-theme>=1.0.0
+    doc8>=0.11.2
