upgrade spdx-tools to v0.8
as the library has been refactored, this requires some code adaption of the current output_spdx.py
and regeneration of the test files

Signed-off-by: Armin Tänzer <armin.taenzer@tngtech.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -105,7 +105,7 @@ install_requires =
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
     saneyaml >= 0.6.0
-    spdx_tools == 0.7.0rc0
+    spdx_tools == 0.8.1
     text_unidecode >= 1.0
     toml >= 0.10.0
     urlpy
