--- a/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
+++ b/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
@@ -29,10 +29,10 @@ headers:
       system_environment:
         operating_system: linux
         cpu_architecture: 64
-        platform: Linux-5.15.0-73-generic-x86_64-with-glibc2.29
-        platform_version: '#80~20.04.1-Ubuntu SMP Wed May 17 14:58:14 UTC 2023'
+        platform: Linux-5.15.0-76-generic-x86_64-with-glibc2.29
+        platform_version: '#83~20.04.1-Ubuntu SMP Wed Jun 21 20:23:31 UTC 2023'
         python_version: "3.8.10 (default, May 26 2023, 14:05:08) \n[GCC 9.4.0]"
-      spdx_license_list_version: '3.20'
+      spdx_license_list_version: '3.21'
       files_count: 4
 summary:
   declared_license_expression: apache-2.0
@@ -369,6 +369,7 @@ license_rule_references:
     is_license_reference: no
     is_license_tag: no
     is_license_intro: no
+    is_license_clue: no
     is_continuous: no
     is_builtin: yes
     is_from_license: yes
@@ -596,6 +597,7 @@ license_rule_references:
     is_license_reference: no
     is_license_tag: yes
     is_license_intro: no
+    is_license_clue: no
     is_continuous: no
     is_builtin: yes
     is_from_license: no
@@ -620,6 +622,7 @@ license_rule_references:
     is_license_reference: yes
     is_license_tag: no
     is_license_intro: no
+    is_license_clue: no
     is_continuous: no
     is_builtin: yes
     is_from_license: no
@@ -644,6 +647,7 @@ license_rule_references:
     is_license_reference: yes
     is_license_tag: no
     is_license_intro: no
+    is_license_clue: no
     is_continuous: yes
     is_builtin: yes
     is_from_license: no
@@ -668,6 +672,7 @@ license_rule_references:
     is_license_reference: no
     is_license_tag: no
     is_license_intro: no
+    is_license_clue: no
     is_continuous: no
     is_builtin: yes
     is_from_license: yes
