--- a/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
+++ b/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
@@ -90,21 +90,21 @@ packages:
       - license_expression: apache-2.0
         matches:
           - score: '100.0'
-            start_line: 4
-            end_line: 4
-            matched_length: 4
+            start_line: 1
+            end_line: 1
+            matched_length: 3
             match_coverage: '100.0'
-            matcher: 2-aho
+            matcher: 1-hash
             license_expression: apache-2.0
-            rule_identifier: apache-2.0_65.RULE
+            rule_identifier: spdx_license_id_apache-2.0_for_apache-2.0.RULE
             rule_relevance: 100
-            rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/apache-2.0_65.RULE
-            matched_text: license = Apache-2.0
-        identifier: apache_2_0-ec759ae0-ea5a-f138-793e-388520e080c0
+            rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/spdx_license_id_apache-2.0_for_apache-2.0.RULE
+            matched_text: Apache-2.0
+        identifier: apache_2_0-d66ab77d-a5cc-7104-e702-dc7df61fe9e8
     other_license_expression:
     other_license_expression_spdx:
     other_license_detections: []
-    extracted_license_statement:
+    extracted_license_statement: Apache-2.0
     notice_text:
     source_packages: []
     extra_data: {}
@@ -119,10 +119,13 @@ packages:
     purl: pkg:pypi/codebase
 dependencies: []
 license_detections:
-  - identifier: apache_2_0-ec759ae0-ea5a-f138-793e-388520e080c0
-    license_expression: apache-2.0
-    detection_count: 2
   - identifier: apache_2_0-ab23f79b-ec38-9a8a-9b23-85059407f34d
+    license_expression: apache-2.0
+    detection_count: 1
+  - identifier: apache_2_0-d66ab77d-a5cc-7104-e702-dc7df61fe9e8
+    license_expression: apache-2.0
+    detection_count: 1
+  - identifier: apache_2_0-ec759ae0-ea5a-f138-793e-388520e080c0
     license_expression: apache-2.0
     detection_count: 1
   - identifier: apache_2_0_and__apache_2_0_or_mit-9b638e72-e872-a67f-3447-eec297ef7b39
@@ -706,6 +709,31 @@ license_rule_references:
       CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
       TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
       SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+  - license_expression: apache-2.0
+    identifier: spdx_license_id_apache-2.0_for_apache-2.0.RULE
+    language: en
+    rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/spdx_license_id_apache-2.0_for_apache-2.0.RULE
+    is_license_text: no
+    is_license_notice: no
+    is_license_reference: yes
+    is_license_tag: no
+    is_license_intro: no
+    is_license_clue: no
+    is_continuous: no
+    is_builtin: yes
+    is_from_license: no
+    is_synthetic: no
+    length: 3
+    relevance: 100
+    minimum_coverage: 100
+    referenced_filenames: []
+    notes: Used to detect a bare SPDX license id
+    ignorable_copyrights: []
+    ignorable_holders: []
+    ignorable_authors: []
+    ignorable_urls: []
+    ignorable_emails: []
+    text: apache-2.0
 files:
   - path: package-and-licenses
     type: directory
@@ -1148,21 +1176,21 @@ files:
           - license_expression: apache-2.0
             matches:
               - score: '100.0'
-                start_line: 4
-                end_line: 4
-                matched_length: 4
+                start_line: 1
+                end_line: 1
+                matched_length: 3
                 match_coverage: '100.0'
-                matcher: 2-aho
+                matcher: 1-hash
                 license_expression: apache-2.0
-                rule_identifier: apache-2.0_65.RULE
+                rule_identifier: spdx_license_id_apache-2.0_for_apache-2.0.RULE
                 rule_relevance: 100
-                rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/apache-2.0_65.RULE
-                matched_text: license = Apache-2.0
-            identifier: apache_2_0-ec759ae0-ea5a-f138-793e-388520e080c0
+                rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/spdx_license_id_apache-2.0_for_apache-2.0.RULE
+                matched_text: Apache-2.0
+            identifier: apache_2_0-d66ab77d-a5cc-7104-e702-dc7df61fe9e8
         other_license_expression:
         other_license_expression_spdx:
         other_license_detections: []
-        extracted_license_statement:
+        extracted_license_statement: Apache-2.0
         notice_text:
         source_packages: []
         file_references: []
