ref: added bitcode to setup.cfg
Signed-off-by: 35C4n0r <jaykumar20march@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ install_requires =
     attrs >= 22.1.0;python_version>='3.11'
     ahocode
     Beautifulsoup4 >= 4.0.0
+    bitcode
     boolean.py >= 4.0
     chardet >= 3.0.0
     click >= 6.7, !=7.0
