ref: refactored Imports to fallback to sanexml.
- Added try catch blocks for import.

Signed-off-by: Jay <jaykumar20march@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -106,6 +106,7 @@ install_requires =
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
+    sanexml
     saneyaml >= 0.6.0
     spdx_tools == 0.7.0rc0
     text_unidecode >= 1.0
