ref: added test packages to setup.cfg
Signed-off-by: Jay <jaykumar20march@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,9 @@ python_requires = >=3.7
 install_requires =
     attrs >= 18.1,!=20.1.0;python_version<'3.11'
     attrs >= 22.1.0;python_version>='3.11'
-    ahocode
+    ahocode-test >= 1.0.0
     Beautifulsoup4 >= 4.0.0
+    test-bitcode-alt >= 0.0.1
     boolean.py >= 4.0
     chardet >= 3.0.0
     click >= 6.7, !=7.0
