ref: removed intbitset and pyahocorasick from setup.cfg
Signed-off-by: Jay <jaykumar20march@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,7 +82,7 @@ install_requires =
     gemfileparser2 >= 0.9.0
     html5lib
     importlib_metadata
-    intbitset >= 3.0.2
+;    intbitset >= 3.0.2
     jaraco.functools
     javaproperties >= 0.5
     jinja2 >= 2.7.0
@@ -101,7 +101,7 @@ install_requires =
     pluggy >= 1.0.0
     plugincode >= 32.0.0
     publicsuffix2
-    pyahocorasick >= 2.0.0
+;    pyahocorasick >= 2.0.0
     pygmars >= 0.7.0
     pygments
     pymaven_patch >= 0.2.8
