add: added support for bitcode-alt-1.0.0
Signed-off-by: Jay <jaykumar20march@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ install_requires =
     gemfileparser2 >= 0.9.0
     html5lib
     importlib_metadata
-    intbitset >= 3.0.2
+    test-bitcode-alt >= 1.0.0
     jaraco.functools
     javaproperties >= 0.5
     jinja2 >= 2.7.0
